<resources>
    <string name="app_name">WeatherApp</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="city">City</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_key">AIzaSyBRwEZm4_BffBN-wwHtmx2SeteMxl07Mj8</string>
    <string name="value_cv_city_temp">15°</string>
    <string name="value_cv_city_tv_rain">Rain</string>
    <string name="value_cv_tv_city_hint_rain">60%</string>
    <string name="value_cv_tv_city_humi">Humi</string>
    <string name="value_cv_tv_text_hum">18%</string>
    <string name="value_cv_tv_wind">Wind</string>
    <string name="value_cv_hint_tv_rain">40%</string>
    <string name="value_card_tv_hint__home">Bogotá</string>
    <string name="card_home_tv_hint_weather">Sunny</string>
    <string name="value_temp_hint">20°</string>
    <string name="value_dialog_map_current_information">Current Information</string>
    <string name="value_dialog_tv_city_name">City Name:</string>
    <string name="value_dialog_tv_namecity">namecity</string>
    <string name="value_dialog_tv_country_name">Country Name:</string>
    <string name="value_dialog_hint_countryname">countryname</string>
    <string name="value_dialog_tv_latitude">Latitude:</string>
    <string name="value_dialog_tv_latitudehint">latitudehint</string>
    <string name="value_dialog_tv_longitude">Longitude:</string>
    <string name="value_dialog_tv_longitudehint">longitudehint</string>
    <string name="value_dialog_btn_accept">Accept</string>
    <string name="value_dialog_btn_decline">Decline</string>
</resources>