<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_fragment_city"
        style="@style/style_card_city"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_card_city_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Monday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/im_card_city"
                style="@style/style_card_city_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_city_day"
                app:srcCompat="@drawable/ic_city_rain"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/tv_card_city_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_cv_city_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/im_card_city" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/value_card_city_text_information"
                android:layout_marginTop="@dimen/value_card_city_text_information"
                android:layout_marginEnd="@dimen/value_card_city_text_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_city_temp">

                <TextView
                    android:id="@+id/tv_card_title_city_rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/value_cv_city_tv_rain"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_card_text_city_rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_cv_tv_city_hint_rain"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_card_title_city_rain" />

                <TextView
                    android:id="@+id/tv_card_title_city_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_cv_tv_city_humi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_title_city_rain" />

                <TextView
                    android:id="@+id/tv_card_text_city_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_cv_tv_text_hum"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_card_title_city_hum"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_text_city_rain" />

                <TextView
                    android:id="@+id/tv_card_title_city_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_cv_tv_wind"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_title_city_hum" />

                <TextView
                    android:id="@+id/tv_card_text_city_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_cv_hint_tv_rain"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_card_title_city_wind"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_text_city_hum" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>